BRN-19 | remote extra methods, perform a bit of refactoring